// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup renders 1`] = `
<div
  className="sc-bKOxAn flIGer"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-hkWWFD hobbkF"
  >
    <input
      className="sc-bndzKH pRkxf"
      dir="ltr"
      placeholder="Country"
      type="text"
    />
  </div>
  <div
    className="sc-hkWWFD hobbkF"
  >
    <input
      className="sc-bndzKH eqxJAz"
      dir="ltr"
      placeholder="Phone"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInputGroup renders RTL 1`] = `
<div
  className="sc-bKOxAn flIGer"
  dir="rtl"
  orientation="horizontal"
>
  <div
    className="sc-hkWWFD hobbkF"
  >
    <input
      className="sc-bndzKH eqxJAz"
      dir="rtl"
      placeholder="Country"
      type="text"
    />
  </div>
  <div
    className="sc-hkWWFD hobbkF"
  >
    <input
      className="sc-bndzKH pRkxf"
      dir="rtl"
      placeholder="Phone"
      type="text"
    />
  </div>
</div>
`;

exports[`TextInputGroup renders and allows access to DOM and values for text field 1`] = `
<div
  className="flex flex-col gap-3"
>
  <div
    className="sc-bKOxAn flIGer"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH pRkxf"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH eqxJAz"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div>
    <span
      className="sc-cMOycp hEKLSI"
      size="xsmall"
    >
      Country: 
      Estonia
    </span>
  </div>
  <div>
    <span
      className="sc-cMOycp hEKLSI"
      size="xsmall"
    >
      Phone: 
      +372 45678901
    </span>
  </div>
</div>
`;

exports[`TextInputGroup renders and allows event listeners for the select fields 1`] = `
<div
  className="flex flex-col gap-3 pb-24 ps-40 pe-40 w-full"
>
  <div
    className="sc-cmYlSf caVzXj"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-fjsWye ccPaqi"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-10-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-1sksh5w-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-15dykvv-ValueContainer"
          >
            <div
              className="sc-eLHYIy hvMiqF"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-10-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Country
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-10-listbox"
                aria-describedby="react-select-10-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-10-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-10-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eBhLNR bSHDSJ"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-11-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-18o9gyc-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-15dykvv-ValueContainer"
          >
            <div
              className="sc-eLHYIy hvMiqF"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-11-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Vehicle
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-11-listbox"
                aria-describedby="react-select-11-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-11-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-11-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <span
      className="sc-cMOycp hEKLSI"
      size="xsmall"
    >
      Country: 
      
    </span>
  </div>
  <div>
    <span
      className="sc-cMOycp hEKLSI"
      size="xsmall"
    >
      Vehicle: 
      
    </span>
  </div>
</div>
`;

exports[`TextInputGroup renders different types 1`] = `
<div
  className="sc-bKOxAn flIGer"
  dir="ltr"
  orientation="horizontal"
>
  <div
    className="sc-hkWWFD hobbkF"
  >
    <input
      className="sc-bndzKH pRkxf"
      dir="ltr"
      placeholder="Email"
      type="email"
    />
  </div>
  <div
    className="sc-hkWWFD hobbkF"
  >
    <div
      className="sc-jveewi iGIuMt"
    >
      <input
        className="sc-bndzKH inUzhP"
        dir="ltr"
        placeholder="Password"
        type="password"
      />
      <div
        className="sc-eEXVIU eGMFxF"
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders multi select 1`] = `
<div
  className="flex items-end flex-wrap pb-44 w-full justify-center ps-40 pe-40"
>
  <div
    className="sc-cmYlSf caVzXj"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-fjsWye ccPaqi"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-1q7v8my-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-112g2nh-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-bPnocz gRTENQ"
            >
              <div
                className=" css-jexdti-placeholder"
                id="react-select-4-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-4-listbox"
                aria-describedby="react-select-4-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-4-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-4-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eBhLNR bSHDSJ"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-12vowvu-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-112g2nh-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-bPnocz gRTENQ"
            >
              <div
                className=" css-jexdti-placeholder"
                id="react-select-5-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-5-listbox"
                aria-describedby="react-select-5-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-5-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-5-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select 1`] = `
<div
  className="flex items-end flex-wrap pb-44 w-full justify-center ps-40 pe-40"
>
  <div
    className="sc-cmYlSf caVzXj"
    dir="ltr"
    orientation="horizontal"
  >
    <div
      className="sc-fjsWye ccPaqi"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-1q7v8my-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-eLHYIy dQVFfe"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-2-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-2-listbox"
                aria-describedby="react-select-2-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-2-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-2-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eBhLNR bSHDSJ"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-12vowvu-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-eLHYIy dQVFfe"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-3-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-3-listbox"
                aria-describedby="react-select-3-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-3-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-3-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select RTL 1`] = `
<div
  className="flex items-end flex-wrap pb-44 w-full justify-center ps-40 pe-40"
>
  <div
    className="sc-cmYlSf caVzXj"
    dir="rtl"
    orientation="horizontal"
  >
    <div
      className="sc-fjsWye ccPaqi"
    >
      <div
        className=" css-9ebu9r-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-8-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-12vowvu-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-eLHYIy dQVFfe"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-8-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-8-listbox"
                aria-describedby="react-select-8-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-8-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-8-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eBhLNR bSHDSJ"
    >
      <div
        className=" css-9ebu9r-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-9-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-1q7v8my-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-eLHYIy dQVFfe"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-9-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-9-listbox"
                aria-describedby="react-select-9-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-9-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-9-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders single select vertical 1`] = `
<div
  className="flex items-end flex-wrap pb-44 w-full justify-center ps-40 pe-40"
>
  <div
    className="sc-cmYlSf gTcThE"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-fjsWye ccPaqi"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-6-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-17qqma-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-eLHYIy dQVFfe"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-6-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-6-listbox"
                aria-describedby="react-select-6-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-6-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-6-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-eBhLNR bSHDSJ"
    >
      <div
        className=" css-1tsy5a7-container"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-7-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
        />
        <div
          className=" css-109wl5b-control"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className=" css-1f3h6sw-ValueContainer"
          >
            <div
              className="sc-hxCwtQ iCEhMC"
            >
              xLarge
            </div>
            <div
              className="sc-eLHYIy dQVFfe"
            >
              <div
                className=" css-wuj7bk-placeholder"
                id="react-select-7-placeholder"
              >
                <div
                  className="sc-gbFqDM jSPCsR"
                >
                  Choose an option
                </div>
              </div>
              <input
                aria-autocomplete="list"
                aria-controls="react-select-7-listbox"
                aria-describedby="react-select-7-placeholder"
                aria-expanded={false}
                aria-haspopup={true}
                aria-owns="react-select-7-listbox"
                aria-readonly={true}
                className="css-mohuvp-dummyInput-DummyInput"
                disabled={false}
                id="react-select-7-input"
                inputMode="none"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                tabIndex={0}
                value=""
              />
            </div>
          </div>
          <div
            className=" css-1hb7zxy-IndicatorsContainer"
          >
            <svg
              className="sc-efBctP"
              fill="none"
              fontSize="1.5rem"
              height="1em"
              style={
                Object {
                  "marginInlineEnd": "0.5rem",
                }
              }
              viewBox="0 0 32 32"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M25 11.5l-9 9-9-9"
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders sizes 1`] = `
<div
  className="flex flex-col gap-4"
>
  <div>
    <div
      className="sc-bKOxAn flIGer"
      dir="ltr"
      orientation="horizontal"
    >
      <div
        className="sc-hkWWFD hobbkF"
      >
        <input
          className="sc-bndzKH pRkxf"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
      </div>
      <div
        className="sc-hkWWFD hobbkF"
      >
        <input
          className="sc-bndzKH eqxJAz"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="sc-bKOxAn flIGer"
      dir="ltr"
      orientation="horizontal"
    >
      <div
        className="sc-hkWWFD hobbkF"
      >
        <input
          className="sc-bndzKH fsipuU"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
      </div>
      <div
        className="sc-hkWWFD hobbkF"
      >
        <input
          className="sc-bndzKH idkMBs"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="sc-bKOxAn gHvDAG"
      dir="ltr"
      orientation="horizontal"
    >
      <div
        className="sc-hkWWFD hobbkF"
      >
        <div
          className="sc-jveewi cMBrUM"
        >
          <input
            className="sc-bndzKH iakIpj"
            dir="ltr"
            placeholder="Country"
            type="text"
          />
          <label
            className="sc-hMtawp hAnfYh"
          />
        </div>
      </div>
      <div
        className="sc-hkWWFD hobbkF"
      >
        <div
          className="sc-jveewi cMBrUM"
        >
          <input
            className="sc-bndzKH fEYJRj"
            dir="ltr"
            placeholder="Phone"
            type="text"
          />
          <label
            className="sc-hMtawp hAnfYh"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInputGroup renders vertical 1`] = `
<div
  className="flex items-center gap-8 flex-wrap w-full justify-center ps-40 pe-40 flex-col"
>
  <div
    className="sc-bKOxAn dFJTdk"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH eZduiX"
        dir="ltr"
        placeholder="Country"
        type="text"
      />
    </div>
    <div
      className="sc-hkWWFD hobbkF"
    >
      <input
        className="sc-bndzKH egnear"
        dir="ltr"
        placeholder="Phone"
        type="text"
      />
    </div>
  </div>
  <div
    className="sc-bKOxAn bVImyp"
    dir="ltr"
    orientation="vertical"
  >
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH kFFrTb"
          dir="ltr"
          placeholder="Country"
          type="text"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
      </div>
    </div>
    <div
      className="sc-hkWWFD hobbkF"
    >
      <div
        className="sc-jveewi cMBrUM"
      >
        <input
          className="sc-bndzKH cUbqhj"
          dir="ltr"
          placeholder="Phone"
          type="text"
        />
        <label
          className="sc-hMtawp hAnfYh"
        />
      </div>
    </div>
  </div>
</div>
`;
